# google-authenticator-rust

./: Cargo.toml
src/: authenticator.rs
