[package]
name = "google-authenticator"
version = "0.4.4"
authors = ["hans <hans@hansk.org>"]
repository = "https://github.com/allkmc/google-authenticator-rust.git"
homepage = "https://github.com/allkmc/google-authenticator-rust"
license = "MIT"
readme = "README.md"
description = "This Rust crate can be used to interact with the Google Authenticator mobile app for 2-factor-authentication."
keywords = ["GoogleAuthenticator","totp","otp","2fa","hotp"]
categories = ["authentication","algorithms"]
edition = "2021"

[lib]
name = "google_authenticator"
crate-type = ["rlib","staticlib"]

[dependencies]
rand = "0.10.0"
base32 = "0.5.1"
hmac-sha1 = "0.2.2"
percent-encoding = "2"
qrcode = { version  = "0.14.1", optional = true }
lazy_static = "1.4.0"
libc = "0.2.0"

[target.i686-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.x86_64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[target.aarch64-pc-windows-msvc.dependencies]
vc-ltl = "5.0.5"

[dev-dependencies]
ureq = "3.3.0"

[features]
default = ["qrcode"]
with-qrcode = ["qrcode"]
clib = []
